--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+:root {
+  --black-color: #2e2f42;
+  --blue-color: #404bbf;
+  --second-blue-color:#4d5ae5;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -11,7 +17,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--second-blue-color);
 }
 
 .link {
@@ -19,7 +25,7 @@ body {
 }
 
 .logo-span {
-  color: #2e2f42;
+  color: var(--black-color);
 }
 .list {
   list-style: none;
@@ -29,14 +35,14 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--black-color);
 }
 .link {
   text-decoration: none;
-  color: #404bbf;
+  color: var(--blue-color);
 }
 .link:focus {
-  color: #404bbf;
+  color: var(--blue-color);
 }
 .address {
   font-style: normal;
@@ -48,7 +54,7 @@ body {
   color: #434455;
 }
 .first-section {
-  background-color: #2e2f42;
+  background-color: var(--black-color);
 }
 .first-section-h {
   font-size: 56px;
@@ -58,7 +64,7 @@ body {
   color: #ffffff;
 }
 .first-section-button {
-  background-color: #4d5ae5;
+  background-color: var(--second-blue-color);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -68,17 +74,15 @@ body {
   cursor: pointer;
 }
 .first-section-button:hover {
-  background-color: #404bbf;
+  background-color: var(--blue-color);
 }
 .first-section-button:focus {
-  background-color: #404bbf;
+  background-color: var(--blue-color);
 }
-.second-section-li{
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    
-
+.second-section-li {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--brand-color);
 }
