--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--second-blue-color);
+  color: #4d5ae5;
 }
 
 .link {
@@ -25,7 +25,7 @@ body {
 }
 
 .logo-span {
-  color: var(--black-color);
+  color: #2e2f42;
 }
 .list {
   list-style: none;
@@ -35,14 +35,14 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--black-color);
+  color: #2e2f42;
 }
 .link {
   text-decoration: none;
-  color: var(--blue-color);
+  color: #404bbf;
 }
 .link:focus {
-  color: var(--blue-color);
+  color: #404bbf;
 }
 .address {
   font-style: normal;
@@ -54,7 +54,7 @@ body {
   color: #434455;
 }
 .first-section {
-  background-color: var(--black-color);
+  background-color: #2e2f42;
 }
 .first-section-h {
   font-size: 56px;
@@ -64,7 +64,7 @@ body {
   color: #ffffff;
 }
 .first-section-button {
-  background-color: var(--second-blue-color);
+  background-color: #4d5ae5;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -74,15 +74,15 @@ body {
   cursor: pointer;
 }
 .first-section-button:hover {
-  background-color: var(--blue-color);
+  background-color: #404bbf;
 }
 .first-section-button:focus {
-  background-color: var(--blue-color);
+  background-color: #404bbf;
 }
 .second-section-li {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--brand-color);
+  color: #2e2f42;
 }
