Add styling to third section

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,3 +86,12 @@ body {
   letter-spacing: 0.02em;
   color: var(--black-color);
 }
+
+.third-section {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--black-color);
+}
