--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,14 @@
 :root {
   --black-color: #2e2f42;
   --blue-color: #404bbf;
-  --second-blue-color:#4d5ae5;
+  --second-blue-color: #4d5ae5;
+  --second-black-color: #434455;
+  --white-color: #f4f4fd;
 }
 
 body {
   font-family: "Roboto", sans-serif;
-  color: #434455;
+  color: var(--second-black-color);
   background-color: #ffffff;
 }
 
@@ -27,9 +29,11 @@ body {
 .logo-span {
   color: var(--black-color);
 }
+
 .list {
   list-style: none;
 }
+
 .nav-li-first {
   font-weight: 500;
   font-size: 16px;
@@ -37,25 +41,31 @@ body {
   letter-spacing: 0.02em;
   color: var(--black-color);
 }
+
 .link {
   text-decoration: none;
   color: var(--blue-color);
 }
+
 .link:focus {
   color: var(--blue-color);
 }
+
 .address {
   font-style: normal;
 }
+
 .address-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--second-black-color);
 }
+
 .first-section {
   background-color: var(--black-color);
 }
+
 .first-section-h {
   font-size: 56px;
   line-height: 1.07;
@@ -63,6 +73,7 @@ body {
   letter-spacing: 0.02em;
   color: #ffffff;
 }
+
 .first-section-button {
   background-color: var(--second-blue-color);
   font-family: "Roboto", sans-serif;
@@ -73,12 +84,22 @@ body {
   color: #ffffff;
   cursor: pointer;
 }
+
 .first-section-button:hover {
   background-color: var(--blue-color);
 }
+
 .first-section-button:focus {
   background-color: var(--blue-color);
 }
+
+.second-section-h {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
 .second-section-li {
   font-weight: 500;
   font-size: 20px;
@@ -87,11 +108,54 @@ body {
   color: var(--black-color);
 }
 
-.third-section {
+.second-section-p {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--second-black-color);
+}
+
+.third-section-h {
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--black-color);
+}
+
+.forth-section {
+  background-color: var(--white-color);
+}
+
+.forth-section-h {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--black-color);
+}
+.forth-section-li {
+  background-color: #ffffff;
+}
+.forth-section-li-h {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--black-color);
+}
+.forth-section-li-p {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--second-blue-color);
+}
+.footer {
+  background-color: var(--black-color);
+}
+.footer-p {
+  line-height: 1.5;
+  color: var(--white-color);
+  letter-spacing: 0.02em;
 }
