--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: var(--second-black-color);
+  letter-spacing: 0.02em;
 }
 
 .third-section-h {
