Revert "fix-update"
This reverts commit 6082b6e1a5edd4f6ca43b63cc5c12dacec9355b6.

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,12 @@ body {
 }
 
 .link {
-  text-decoration: none; 
+  text-decoration: none;
+  color: var(--blue-color);
+}
+
+.link:focus {
+  color: var(--blue-color);
 }
 
 .logo-span {
