--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,12 @@
   --second-black-color: #434455;
   --white-color: #f4f4fd;
 }
-
+.black-color{
+  color: var(--black-color);
+}
+.blue-color{
+  color: var(--blue-color);
+}
 body {
   font-family: "Roboto", sans-serif;
   color: var(--second-black-color);
@@ -25,14 +30,9 @@ body {
 .link {
   text-decoration: none; 
 }
-.link:focus {
-  color: var(--blue-color);
+.logo-span-footer {
+  color:#f4f4fd;
 }
-
-.logo-span {
-  color: var(--black-color);
-}
-
 .list {
   list-style: none;
 }
@@ -42,7 +42,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--black-color);
 }
 
 .address {
@@ -54,10 +53,6 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--second-black-color);
-}
-
-.first-section {
-  background-color: var(--black-color);
 }
 
 .first-section-h {
@@ -96,7 +91,6 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--black-color);
 }
 
 .section-p {
@@ -112,7 +106,6 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: var(--black-color);
 }
 
 .forth-section {
@@ -125,7 +118,6 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: var(--black-color);
 }
 .forth-section-li {
   background-color: #ffffff;
@@ -136,9 +128,6 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--second-blue-color);
-}
-.footer {
-  background-color: var(--black-color);
 }
 .footer-p {
   line-height: 1.5;
