--- a/css/styles.css
+++ b/css/styles.css
@@ -115,12 +115,13 @@ body {
   background-color: var(--white-color);
 }
 
-.forth-section-h {
+.section-title {
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  color: var(--black-color);
 }
 .forth-section-li {
   background-color: #ffffff;
