--- a/css/styles.css
+++ b/css/styles.css
@@ -82,11 +82,12 @@ body {
   background-color: var(--blue-color);
 }
 
-.section-h {
+.section-title-sub {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: var(--black-color);
 }
 
 .second-section-li {
