--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@ body {
 .link {
   text-decoration: none; 
 }
+.link:hover, .link:focus{
+  color: var(--blue-color)
+}
 .logo-span-footer {
   color:#f4f4fd;
 }
@@ -41,32 +44,32 @@ body {
   list-style: none;
 }
 
-.nav-li-first {
+.nav-li{
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-
+.nav-li:hover,.nav-li:focus{
+  color: var(--blue-color);
+}
 .address {
   font-style: normal;
 }
-
 .address-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--second-black-color);
 }
-
-.first-section-h {
+.hero{
+  background-color: var(--black-color);
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
 }
-
 .first-section-button {
   background-color: var(--second-blue-color);
   font-family: "Roboto", sans-serif;
@@ -77,7 +80,6 @@ body {
   color: #ffffff;
   cursor: pointer;
 }
-
 .first-section-button:hover,
 .first-section-button:focus {
   background-color: var(--blue-color);
