--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,9 @@ body {
 }
 .hero{
   background-color: var(--black-color);
+  
+}
+.section-primary-title{
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
@@ -157,4 +160,8 @@ body {
 .portfolio-first-section-button:focus {
   color: #ffffff;
   background-color: #404bbf;
+}
+.footer-items{
+  background-color:var(--black-color);
+  
 }
