--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ body {
   background-color: var(--blue-color);
 }
 
-.section-title-sub, .title-team {
+.section-title-sub, .about-team-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -110,7 +110,7 @@ body {
   font-size: 16px;
 }
 
-.forth-section {
+.about-team {
   background-color: var(--white-color);
 }
 
@@ -122,7 +122,7 @@ body {
   text-transform: capitalize;
   color: var(--black-color);
 }
-.forth-section-li {
+.about-team-list {
   background-color: #ffffff;
 }
 
