--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,19 @@ body {
   letter-spacing: 0.02em;
   color: var(--second-blue-color);
 }
+.our-portfolio-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color:#2e2f42;
+}
+.our-portfolio-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color:#434455;
+}
 .footer-p {
   line-height: 1.5;
   color: var(--white-color);
